# Cortex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_models.cpp
include/: cortex.hpp
src/: CMakeLists.txt  main.cpp
src/analysis/: latency_throughput.hpp  roofline_model.hpp
src/core/: systolic_array.hpp  tpu_architecture.hpp
src/models/: benchmark_models.hpp
src/simulation/: batch_norm_fusion.hpp  dataflow_engine.hpp  memory_bandwidth.hpp  quantization.hpp
src/utils/: benchmark_runner.hpp
tests/: CMakeLists.txt  test_benchmark.cpp  test_quantization.cpp  test_roofline.cpp  test_systolic_array.cpp  test_tpu.cpp
